--- a/charts/kube-ovn/Chart.yaml
+++ b/charts/kube-ovn/Chart.yaml
@@ -23,4 +23,4 @@ version: 1.13.0
 # It is recommended to use it with quotes.
 appVersion: "1.13.0"
 
-kubeVersion: ">= 1.23.0"
+kubeVersion: ">= 1.23.0-0"
