--- a/charts/kube-ovn/Chart.yaml
+++ b/charts/kube-ovn/Chart.yaml
@@ -23,4 +23,4 @@ version: v1.12.4-mc
 # It is recommended to use it with quotes.
 appVersion: "v1.12.4-mc"
 
-kubeVersion: ">= 1.23.0"
+kubeVersion: ">= 1.23.0-0"
