--- a/charts/kube-ovn/templates/kube-ovn-crd.yaml
+++ b/charts/kube-ovn/templates/kube-ovn-crd.yaml
@@ -1268,8 +1268,14 @@ spec:
       - jsonPath: .status.v4Eip
         name: V4Eip
         type: string
+      - jsonPath: .status.v6Eip
+        name: V6Eip
+        type: string
       - jsonPath: .status.v4Ip
         name: V4Ip
+        type: string
+      - jsonPath: .status.v6Ip
+        name: V6Ip
         type: string
       - jsonPath: .status.ready
         name: Ready
@@ -1325,6 +1331,8 @@ spec:
                   type: string
                 v4Ip:
                   type: string
+                v6Ip:
+                  type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -1353,8 +1361,14 @@ spec:
       - jsonPath: .status.v4Eip
         name: V4Eip
         type: string
+      - jsonPath: .status.v6Eip
+        name: V6Eip
+        type: string
       - jsonPath: .status.v4IpCidr
         name: V4IpCidr
+        type: string
+      - jsonPath: .status.v6IpCidr
+        name: V6IpCidr
         type: string
       - jsonPath: .status.ready
         name: Ready
@@ -1370,7 +1384,11 @@ spec:
                   type: boolean
                 v4Eip:
                   type: string
+                v6Eip:
+                  type: string
                 v4IpCidr:
+                  type: string
+                v6IpCidr:
                   type: string
                 vpc:
                   type: string
@@ -1403,6 +1421,8 @@ spec:
                 vpc:
                   type: string
                 v4IpCidr:
+                  type: string
+                v6IpCidr:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1438,8 +1458,14 @@ spec:
         - jsonPath: .status.v4Eip
           name: V4Eip
           type: string
+        - jsonPath: .status.v6Eip
+          name: V6Eip
+          type: string
         - jsonPath: .status.v4Ip
           name: V4Ip
+          type: string
+        - jsonPath: .status.v6Ip
+          name: V6Ip
           type: string
         - jsonPath: .status.internalPort
           name: InternalPort
@@ -1511,6 +1537,8 @@ spec:
                 vpc:
                   type: string
                 v4Ip:
+                  type: string
+                v6Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
