--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -147,7 +147,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache@v4
@@ -303,7 +303,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache@v4
@@ -419,7 +419,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -475,7 +475,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -583,7 +583,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -635,7 +635,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -770,7 +770,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -872,7 +872,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -931,7 +931,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1033,7 +1033,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1082,7 +1082,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1156,7 +1156,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1208,7 +1208,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1275,7 +1275,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Uninstall Kube-OVN
         run: make kind-uninstall-chart
 
@@ -1324,7 +1324,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1375,7 +1375,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1426,7 +1426,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1479,7 +1479,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1583,7 +1583,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1632,7 +1632,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1691,7 +1691,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1774,7 +1774,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1825,7 +1825,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1903,7 +1903,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1958,7 +1958,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2051,7 +2051,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2117,7 +2117,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -2172,7 +2172,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2234,7 +2234,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -2288,7 +2288,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
   push:
     name: Push Images
     needs:
